@@ -1,3 +1,11 @@
+2008-08-20  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #525555
+
+	* google-source.c: (print_uri_noproto): Removed.
+	* google-source.c: (user_changed): Do not leak.
+	* google-source.c: (plugin_google): Get username from source, not URL.
+
 2008-08-14  Jörgen Scheibengruber  <mfcn@gmx.de>
 
 	* google-contacts-source.c (on_ssl_cb_toggled),
